--- a/login/index.html
+++ b/login/index.html
@@ -14,7 +14,7 @@
         <div class="container">
           <h1 class="visually-hidden">Spot transportation managment system</h1>
           <nav class="header__nav">
-            <a href="../orders/" class="header__logo">
+            <a href="../spot/" class="header__logo">
               <span class="header__logo-text">SPOT</span>
               <span class="header__logo-round"></span>
             </a>
@@ -45,7 +45,7 @@
 
       <footer class="footer">
         <div class="footer__container container">
-          <a href="../orders/" class="footer__logo">
+          <a href="../spot/" class="footer__logo">
             <span class="footer__logo-text">SPOT</span>
             <span class="footer__logo-round"></span>
           </a>
