--- a/register/index.html
+++ b/register/index.html
@@ -27,7 +27,7 @@
           <div class="hero__container container">
             <div class="hero__item">
               <h2 class="form-header">Create new account</h2>
-              <form action="#" method="post" class="hero__form">
+              <form action="#" method="post" class="hero__form" id="form__register">
 
                 <div class="form__group">
                   <label class="form__error-label label-for-name" for="name"></label>
@@ -52,7 +52,7 @@
                 <div class="form__password-block">
                   <span class="password__header">Password should contain:</span>
                   <span class="password__message length">- 8 or more characters</span>
-                  <span class="password__message symbols">- One of special symbol "#,!,%,*,@"</span>
+                  <span class="password__message symbols">- One special symbol "#,!,%,*,@"</span>
                   <span class="password__message big-letter">- One letter in uppercase</span>
                   <span class="password__message number">- At least one number</span>
                 </div>
