--- a/orders/index.html
+++ b/orders/index.html
@@ -49,7 +49,7 @@
               <nav class="orders__nav">
                 <ul class="orders__nav-list">
                   <li class="orders__nav-item">
-                    <h4 class="orders__navbutton">Vacant</h4>
+                    <h4 class="orders__navbutton navbutton-active">Vacant</h4>
                   </li>
                   <li class="orders__nav-item">
                     <h4 class="orders__navbutton">Active</h4>
