--- a/orders/index.html
+++ b/orders/index.html
@@ -63,7 +63,7 @@
                 </ul>
               </nav>
             </div>
-            <ul id="vacant__orders" class="orders active__orders-list">
+            <ul id="Vacant" class="orders active__orders-list">
               <li class="order__cart">
                 <div class="order__description order__id">AR123</div>
                 <div class="order__direction">
@@ -86,7 +86,30 @@
                 </div>
               </li>
             </ul>
-            <ul id="active__orders" class="orders">
+            <ul id="Active" class="orders">
+              <li class="order__cart">
+                <div class="order__description order__id">AR187</div>
+                <div class="order__direction">
+                  <div class="order__description order__from">La Plata</div>
+                  <div class="order__dash"></div>
+                  <div class="order__description order__to">Bariloche</div>
+                </div>
+                <div class="order__cargo-block">
+                  <div class="order__description order__type">TILT 20</div>
+                  <div class="order__description order__cargo">Bags <span class="order__temperature"></span></div>
+                </div>
+                <div class="order__dates">
+                  <div class="order__description order__load-date">10.07.2023</div>
+                  <div class="order__dash"></div>
+                  <div class="order__description order__unload-date">15.07.2023</div>
+                </div>
+                <div class="order__description order__price">2500$</div>
+                <div class="order__buttons">
+                  <button class="order__pick-up-button">More info</button>
+                </div>
+              </li>
+            </ul>
+            <ul id="Completed" class="orders">
               <li class="order__cart">
                 <div class="order__description order__id">AR123</div>
                 <div class="order__direction">
@@ -109,30 +132,7 @@
                 </div>
               </li>
             </ul>
-            <ul id="completed__orders" class="orders">
-              <li class="order__cart">
-                <div class="order__description order__id">AR123</div>
-                <div class="order__direction">
-                  <div class="order__description order__from">Buenos Aires</div>
-                  <div class="order__dash"></div>
-                  <div class="order__description order__to">Cordoba</div>
-                </div>
-                <div class="order__cargo-block">
-                  <div class="order__description order__type">REF 20</div>
-                  <div class="order__description order__cargo">Fruits <span class="order__temperature">+5</span></div>
-                </div>
-                <div class="order__dates">
-                  <div class="order__description order__load-date">10.07.2023</div>
-                  <div class="order__dash"></div>
-                  <div class="order__description order__unload-date">15.07.2023</div>
-                </div>
-                <div class="order__description order__price">2500$</div>
-                <div class="order__buttons">
-                  <button class="order__pick-up-button">More info</button>
-                </div>
-              </li>
-            </ul>
-            <ul id="declined__orders" class="orders">
+            <ul id="Declined" class="orders">
               <li class="order__cart">
                 <div class="order__description order__id">AR123</div>
                 <div class="order__direction">
