--- a/fleet/index.html
+++ b/fleet/index.html
@@ -70,7 +70,9 @@
                   <input required class="form__radio" type="radio" name="trailer" id="REF">REF
                   <input required class="form__radio" type="radio" name="trailer" id="TILT">TILT
                 </div>
-                <button id="add__truck" type="submit" class="transport__add form__button">Add driver</button>
+                <button id="add__truck" type="submit" class="transport__add form__button add__button">Add driver</button>
+                <button id="edit__truck" type="" class="transport__add form__button edit__button">Save</button>
+                <button id="cancel__truck" type="" class="transport__add form__button cancel__button">Cancel</button>
               </form>
             </div>
           </div>
@@ -90,24 +92,6 @@
               </div>
             </div>
             <ul class="transport__list">
-              <!-- <li class="transport__item">
-                <div class="transport__card">
-                  <div class="transport__information">
-                    <div class="information__item">
-                      <div class="transport__info transport__name">Truck name: <span class="info">${el.truckName}</span></div>
-                      <div class="transport__info transport__driver">Driver: <span class="info">${el.truckDriver}</span></div>
-                    </div>
-                    <div class="information__item">
-                      <div class="transport__info transport__number">Number: <span class="info">${el.truckNumber}</span></div>
-                      <div class="transport__info transport__type">Type: <span class="info">${el.truckType}</span></div>
-                    </div>
-                    <div class="information__item">
-                      <div class="transport__info transport__location">Current location: <span class="info">${el.truckLocation}</span></div>
-                      <div class="transport__weather">???</div>
-                    </div>
-                  </div>
-                </div>
-              </li> -->
             </ul>
           </div>
         </div>
