--- a/fleet/index.html
+++ b/fleet/index.html
@@ -70,7 +70,7 @@
                   <input required class="form__radio" type="radio" name="trailer" id="REF">REF
                   <input required class="form__radio" type="radio" name="trailer" id="TILT">TILT
                 </div>
-                <button id="add__truck" type="submit" class="transport__add form__button add__button">Add driver</button>
+                <button id="add__truck" type="" class="transport__add form__button add__button">Add driver</button>
                 <button id="edit__truck" type="" class="transport__add form__button edit__button">Save</button>
                 <button id="cancel__truck" type="" class="transport__add form__button cancel__button">Cancel</button>
               </form>
