--- a/finance/index.html
+++ b/finance/index.html
@@ -21,11 +21,11 @@
 
               <ul class="side__list menu__list">
                 <li class="side__item">
-                  <a href="../orders/" class="side__link link__active menu__link">Orders</a>
+                  <a href="../orders/" class="side__link menu__link">Orders</a>
 
                 </li>
                 <li class="side__item">
-                  <a href="../finance/" class="side__link menu__link">Finance</a>
+                  <a href="../finance/" class="side__link link__active menu__link">Finance</a>
                 </li>
                 <li class="side__item side__item_more-margin">
                   <p class="side__link menu__link">My company</p>
@@ -57,11 +57,11 @@
         <div class="transport__container container container_less-padding">
           <div class="orders__block orders__list">
             <div class="orders__header">
-              <h2 class="transport__list-header transport__list-header-margin">Orders</h2>
-              <nav class="orders__nav">
+              <h2 class="transport__list-header transport__list-header-margin">Finance</h2>
+              <!-- <nav class="orders__nav">
                 <ul class="orders__nav-list">
                   <li class="orders__nav-item">
-                    <h4 class="orders__navbutton navbutton-active">Vacant</h4>
+                    <h4 class="orders__navbutton navbutton-active">Completed</h4>
                   </li>
                   <li class="orders__nav-item">
                     <h4 class="orders__navbutton">Active</h4>
@@ -73,7 +73,7 @@
                     <h4 class="orders__navbutton">Declined</h4>
                   </li>
                 </ul>
-              </nav>
+              </nav> -->
             </div>
             <ul id="Vacant" class="orders active__orders-list">
               <li class="order__cart">
