--- a/login/index.html
+++ b/login/index.html
@@ -27,6 +27,10 @@
           <div class="hero__container container">
             <div class="hero__item">
               <h2 class="form-header">Log in</h2>
+              <div class="form__switcher">
+                <div class="reg__tab orders__navbutton navbutton-active">Carrier</div>
+                <div class="reg__tab orders__navbutton">Shipper</div>
+              </div>
               <form action="#" method="post" class="hero__form login__form">              
                 <input required class="form__input" type="email" placeholder="Email" id="email">
                 <input required class="form__input" type="password" placeholder="Password" id="password">
