--- a/shipper/index.html
+++ b/shipper/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Orders</title>
+  <title>Shipper</title>
   <link rel="stylesheet" href="../css/style.css">
   <script defer src="../js/main.js"></script>
 </head>
@@ -21,7 +21,7 @@
 
               <ul class="side__list menu__list">
                 <li class="side__item">
-                  <a href="../orders/" class="side__link link__active menu__link">Orders</a>
+                  <a href="../orders/" class="side__link link__active menu__link">Shipper</a>
 
                 </li>
                 <li class="side__item">
