--- a/spot/index.html
+++ b/spot/index.html
@@ -29,7 +29,7 @@
 
       <main class="main">
         <section class="hero">
-          <div class="hero__container container">
+          <div class="hero__container container hero__centered">
             <div class="hero__item">
               <h3 class="hero__text">Easy to learn, easy to master transport managing system</h3>
               <div class="hero__text-small">
